Fixed restaurant page so it doesnt overlap with navbar

--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -3,6 +3,7 @@
   margin: 0px 0;
   grid-template-columns: 60% 40%;
   padding: 0 30px;
+  margin-top: 12vh;
 }
 .column1,
 .column2 {
